src/components/Project/Project.module.css
.project {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    margin: 20px;
    background-color: #f5e6e6;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 80%;
    cursor: pointer;
}

.tag {
    display: inline-block;
    padding: 5px 10px;
    margin: 5px;
    background-color: #e2e8f0;
    border-radius: 4px;
    font-size: 1.2em;
    color: #2b6cb0;
}

.tag:hover {
    background-color: #bee3f8;
    cursor: pointer;
}
.header {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    width: 100%;
}
.header h2 {
    grid-column: 2;
    text-align: center;
    color: #2d3748;
}
.dates {
    grid-column: 3;
    display: flex;
    flex-direction: column;
    text-align: right;
    color: #718096;
}
.tagsSection {
    width: 100%;
}

.tags {
    display: flex;
    flex-wrap: wrap;
    overflow: auto;
}
.description {
    text-align: justify;
    color: #4a5568;
    background-color: #ede0e0;
    border-left: 3px solid #b07a7a;
    border-radius: 4px;
    padding: 8px 12px;
    width: 100%;
}
.project a {
    color: #2b6cb0;
    text-decoration: none;
    font-size: larger;
    font-weight: bold;
}

.project:hover {
    background-color: #ddb8b8;
}

.project:hover h2 {
    text-decoration: underline;
}
@media only screen and (max-width: 440px) {
    .project {
        width: 90vw;
    }
    .header {
        flex-direction: column;
        align-items: flex-start;
    }
    .dates {
        text-align: left;
    }
    .tags {
        width: 100%;
        overflow-y: auto;
    }
    .tag {
        font-size: 0.8em;
        color: #2b6cb0;
        background-color: #bee3f8;
    }
    .project h2 {
        font-size: 1.2em;
    }
}

